<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewTicketActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameEditText"
            android:text="@string/nameEditText"
            android:hint="@string/nameEditTextHint"
            android:maxLength="20"
            android:textSize="24dp"
            android:enabled="false"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sourceEditText"
            android:layout_gravity="center_horizontal"
            android:hint="@string/sourceEditTextHint"
            android:textSize="24dp"
            android:enabled="false"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/destinationEditText"
            android:layout_gravity="center_horizontal"
            android:hint="@string/destinationEditTextHint"
            android:textSize="24dp"
            android:enabled="false"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dip"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tripTextView"
            android:id="@+id/tripTextView"
            android:textSize="24dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:id="@+id/tripRadioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oneWayRadioButton"
                android:id="@+id/oneWayRadioButton"
                android:textSize="24dp"
                android:enabled="false"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roundTripRadioButton"
                android:id="@+id/roundTripRadioButton"
                android:textSize="24dp"
                android:enabled="false"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dip"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/departureDateEditText"
                android:layout_weight="1"
                android:hint="@string/departureDateEditText"
                android:enabled="false"/>

            <EditText
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:id="@+id/departureTimeEditText"
                android:hint="@string/depTimeEditText"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/returnDateLayout">

            <EditText
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:id="@+id/returnDateEditText"
                android:hint="@string/returnDateEditText"
                android:enabled="false"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnTimeEditText"
                android:hint="@string/returnTime"
                android:enabled="false"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/beginImageView"
                android:src="@mipmap/begin_icon"
                android:layout_weight=".20"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/previousImageView"
                android:src="@mipmap/back_icon"
                android:layout_weight=".20"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_ticket_finish"
                android:id="@+id/finishButton"
                android:layout_weight=".20"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nextImageView"
                android:src="@mipmap/next_icon"
                android:layout_weight=".20"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lastImageView"
                android:src="@mipmap/end_icon"
                android:layout_weight=".20"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
